--- a/templates/base.html
+++ b/templates/base.html
@@ -7,44 +7,18 @@
 </head>
 
 <body>
-        <h1>
-            <p class="emoji" id="emoji1"></p>
-            ELIZA
-            <p class="emoji" id="emoji2"></p>
-        </h1>
-
-        <div class = "container">
-        <h2>&#127804; Edit your Eliza's Profile &#127804;</h2>
-
-         <div id="Elizapf">
-            <img id="Elizapfp" src="" />
-            <div class="Elizainfo">
-                <div class="ElizaNameInput">
-                    <form id="Elizaform">
-                        <label class="Elizalabel">Eliza's Name:</label><span><input type="text" name="input" id="Elizaname" maxlength="90" placeholder=" Eliza" /></span>
-                    </form>
-                </div>
-                <div class="ElizaNameFile">
-                    <label>Eliza's Profile Picture:</label><span> <input type="file" id="Elizafile" /> </span>
-                </div>
-            </div>
+        <div class="headerText">   
+            <h1>
+                <p class="emoji" id="emoji1"></p>
+                ELIZA Chatbot
+                <p class="emoji" id="emoji2"></p>
+            </h1>
+            <h2> Your Psychotherapist</h2>
         </div>
+   
 
-         <h2>&#127804; Chat with the Eliza! &#127804;</h2>
-        <div id="Elizacontainer">
-            <div id="chat">
-                <ul id="output"></ul>
-            </div>
-            <div id="userinput">
-                <form action="/" method="POST" id="form">
-                    <label>Input:</label>
-
-                    <span><input type="text" name="input" id="Elizainput" maxlength="280" /></span>
-                </form>
-            </div>
-        </div>
-
-         <h2>&#127804; Edit your User Profile &#127804;</h2>
+        
+        <h2>🙋‍♀️ User Profile </h2>
         <div id="playerpf">
             <img id="playerpfp" src="" />
             <div class="playerInfo">
@@ -58,6 +32,23 @@
                 </div>
             </div>
         </div>
+
+        
+
+         <h2>👩‍💻 Chat with the Eliza! </h2>
+        <div id="Elizacontainer">
+            <div id="chat">
+                <ul id="output"></ul>
+            </div>
+            <div id="userinput">
+                <form action="/" method="POST" id="form">
+                    <label>Input:</label>
+
+                    <span><input type="text" name="input" id="Elizainput" maxlength="280" /></span>
+                </form>
+            </div>
+        </div>
+
         </div>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
