--- a/templates/base.html
+++ b/templates/base.html
@@ -56,8 +56,8 @@
         <script type="text/javascript">
             let name = "You";
             let Elizaname = "Eliza";
-            let Elizaurl = "https://i.pinimg.com/564x/6e/57/2b/6e572b2de740df048620481f43c13f64.jpg";
-            let url = "https://www.anime-planet.com/images/characters/tooru-oikawa-59826.jpg";
+            let Elizaurl = "../img/robot-icon.gif";
+            let url = "../img/profile-icon.png";
             $("#playerpfp").attr("src", url);
             $("#Elizapfp").attr("src", Elizaurl);
             $(document).ready(function () {
