feat: test input

--- a/templates/base.html
+++ b/templates/base.html
@@ -42,7 +42,7 @@
             </div>
             <div id="userinput">
                 <form action="/" method="POST" id="form">
-                    <label>Input:</label>
+                    <label>Input teste:</label>
 
                     <span><input type="text" name="input" id="Elizainput" maxlength="280" /></span>
                 </form>
