--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
    
 
         
-        <h2>🙋‍♀️ User Profile </h2>
+        <h2 style="color: #7cb2c3" >🙋‍♀️ User Profile </h2>
         <div id="playerpf">
             <img id="playerpfp" src="" />
             <div class="playerInfo">
@@ -35,16 +35,14 @@
 
         
 
-         <h2>👩‍💻 Chat with the Eliza! </h2>
+         <h2 style="color: #7cb2c3" >👩‍💻 Chat with the Eliza! </h2>
         <div id="Elizacontainer">
             <div id="chat">
                 <ul id="output"></ul>
             </div>
             <div id="userinput">
                 <form action="/" method="POST" id="form">
-                    <label>Input teste:</label>
-
-                    <span><input type="text" name="input" id="Elizainput" maxlength="280" /></span>
+                    <span><input type="text" placeholder="Type your message here: " name="input" id="Elizainput" maxlength="280" /></span>
                 </form>
             </div>
         </div>
